# zephyr_hercules_clion

./: CMakeLists.txt
boards/arm/rm46_launchxl/: Kconfig.board  Kconfig.defconfig  board.cmake  rm46_launchxl.dts  rm46_launchxl.yaml  rm46_launchxl_defconfig
dts/arm/ti/: rm46l852.dtsi  rm46lxxx.dtsi
soc/arm/ti_hercules/: Kconfig  Kconfig.defconfig  Kconfig.soc
soc/arm/ti_hercules/rm46/: CMakeLists.txt  Kconfig.defconfig.rm46l852  Kconfig.defconfig.series  Kconfig.series  Kconfig.soc  linker.ld  soc.h
src/: main.c
